Regester Login added

--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -20,6 +20,10 @@
     <%= form.label :definition %>
     <%= form.text_field :definition %>
   </div>
+  <div class="field">
+    <%= form.label :notice %>
+    <%= form.text_field :notice %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
