--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -11,6 +11,7 @@
     <tr>
       <th>Word</th>
       <th>Definition</th>
+      <th>Notice</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
       <tr>
         <td><%= word.word %></td>
         <td><%= word.definition %></td>
+        <td><%= word.notice %></td>
         <td><%= link_to 'Show', word %></td>
         <td><%= link_to 'Edit', edit_word_path(word) %></td>
         <td><%= link_to 'Destroy', word, method: :delete, data: { confirm: 'Are you sure?' } %></td>
