--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div>
     <%= form.label :password %>
-    <%= form.text_field :password %><br>
+    <%= form.password_field :password %><br>
   </div>
   <%= form.submit "Create Account" %> 
 <% end %>
