--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -10,9 +10,9 @@
 <table>
   <thead>
     <tr>
-      <th>Word</th>
-      <th>Definition</th>
-      <th>Class of Word</th>
+      <th>English</th>
+      <th>Vietnamese</th>
+      <th>Type </th>
     </tr>
   </thead>
   <tbody>
