--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,102 @@
-<br>
-<a href="/">HOME</a>
-<a href="/users/new">Register</a>
-<a href="/">
-	<% if logged_in? %>
-		<%= current_user.username do %>
-		<% end %>
-		<%= link_to 'Logout', logout_path, menthod: :delete%>
-	<% else %>
-		<a href="/login">Login</a>
-	<% end %>
-</a>
-<p style="color:red"><%= flash[:success] %></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #0074d9;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        nav {
+            text-align: center;
+            background-color: #333;
+            padding: 10px;
+        }
+
+        .home-button {
+            background-color: black;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .registrieren-button {
+            background-color: red;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .einloggen-button {
+            background-color: yellow;
+            color: red;
+            border: none;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        p {
+            color: red;
+            text-align: center;
+        }
+		span {
+			background-color: yellow;
+            color: red;
+            border: none;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+		}
+		.logout-button {
+    		background-color: #ff0000; 
+    		color: #fff; 
+    		border: none;
+    		padding: 10px 20px;
+    		text-decoration: none;
+    		border-radius: 5px;
+    		font-weight: bold;
+	}
+
+
+    </style>
+</head>
+
+
+<body>
+    <header>
+        <h1>DeVi Online Wörterbuch</h1>
+    </header>
+    <nav>
+        <a href="/" class="home-button">Home</a>
+        <a href="/users/new" class="registrieren-button">Registrieren</a>
+        <% if logged_in? %>
+            <span class="username"><%= current_user.username %></span>
+            <%= link_to 'Ausloggen', logout_path, method: :delete, class: 'logout-button' %>
+        <% else %>
+            <a href="/login" class="einloggen-button">Einloggen</a>
+        <% end %>
+    </nav>
+    <p><%= flash[:success] %></p>
+</body>
+</html>
