--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,15 @@
-<h1>New Users Page</h1>
+<h1>Neu User</h1>
 <%= form_for @user do |form| %>
   <div>
     <%= form.label :username %>
     <%= form.text_field :username %><br>
     <% @user.errors.full_messages_for(:username).each do |message| %>
-      <div style="color:red"><%= "Username has already taken" %></div>
+      <div style="color:red"><%= "Username ist bereits existiert" %></div>
     <% end %>
   </div>
   <div>
-    <%= form.label :password %>
+    <%= form.label :passwort %>
     <%= form.password_field :password %><br>
   </div>
-  <%= form.submit "Create Account" %> 
+  <%= form.submit "Ertellen" %> 
 <% end %>
