--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,29 +1,75 @@
 <%= form_with model: word do |form| %>
-  <div>
-    <%= form.label :word %><br>
-    <%= form.text_field :word %>
+  <style>
+    
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      font-weight: bold;
+    }
+
+    .form-control {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      margin-top: 5px;
+    }
+
+    .error-message {
+      color: red;
+      font-size: 14px;
+    }
+
+    .form-actions {
+      margin-top: 20px;
+    }
+
+    .btn {
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 3px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .btn-primary {
+      background-color: #007bff;
+      color: #fff;
+    }
+
+    .btn-secondary {
+      background-color: #ccc;
+      color: #000;
+    }
+  </style>
+
+  <div class="form-group">
+    <%= form.label :deutsch %><br>
+    <%= form.text_field :word, class: 'form-control' %>
     <% @word.errors.full_messages_for(:word).each do |message| %>
-      <div><%= "must be given please " %></div>
+      <div class="error-message"><%= message %></div>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :definition %><br>
-    <%= form.text_field :definition %>
+  <div class="form-group">
+    <%= form.label :vietnamesisch %><br>
+    <%= form.text_field :definition, class: 'form-control' %>
     <% @word.errors.full_messages_for(:definition).each do |message| %>
-      <div><%= "must be given please" %></div>
+      <div class="error-message"><%= message %></div>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :wordtype %><br>
-    <%= form.select :wordtype, ['Nouns', 'Adj', 'Adv', 'Verbs'], selected: 'Nouns' %>
+  <div class="form-group">
+    <%= form.label :wortart %><br>
+    <%= form.select :wordtype, ['Adjektiv', 'Substantiv', 'Adverb', 'Verb'], { selected: 'Nouns' }, class: 'form-control' %>
   </div>
 
-  <div>
-    <%= form.submit %>
-    <%= link_to "Back", words_path %>
+  <div class="form-actions">
+    <%= form.submit class: 'btn btn-primary' %>
+    <%= link_to "Zurück", words_path, class: 'btn btn-secondary' %>
   </div>
-
 <% end %>
-
